samples/_failures_safe/1761275722_1c7ae6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0867eb19.c: In function ‘main’:
./samples/SAFE/__tmp_0867eb19.c:173:12: error: missing terminating " character
  173 |     printf("Enter expression:
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0867eb19.c:173:5: error: expected expression at end of input
  173 |     printf("Enter expression:
      |     ^~~~~~
./samples/SAFE/__tmp_0867eb19.c:173:5: error: expected declaration or statement at end of input
